# grimoirelab-elk-topicbox

./: README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: changelog.yml  release.yml
grimoire_elk_topicbox/: utils.py
releases/unreleased/: grimoireelk-backend-for-topicbox.yml
schema/: topicbox.csv
tests/: base.py  model.py  test_topicbox.py
tests/data/: projects-release.json  topicbox.json
