[tool.poetry]
name = "grimoire-elk-topicbox"
version = "0.1.0"
description = "GrimoireELK plugin for topicbox."
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/bitergia-analytics/grimoirelab-elk-topicbox"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "grimoire_elk_topicbox" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "NEWS", format = "sdist" },
    { path = "README.md", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.plugins."grimoire_elk"]
topicbox = 'grimoire_elk_topicbox.utils:get_connectors'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bitergia-analytics/grimoirelab-elk-topicbox/issues"

[tool.poetry.dependencies]
python = "^3.8"

#grimoire-elk = { version = ">=0.106.0", allow-prereleases = true}
#perceval-topicbox = { version = ">=0.1.1", allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
coverage = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
